demos/0020-build-mcp-server/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kagent-gw-ui
  namespace: kagent
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent-gw-ui
  namespace: kagent
spec:
  parentRefs:
    - name: kagent-gw-ui
      namespace: kagent
  hostnames:
    - "my-kagent.example"
  rules:
    - backendRefs:
        - name: kagent-ui
          port: 80
